Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -82,3 +82,4 @@ Temporary commit content 716
 Temporary commit content 737
 Temporary commit content 740
 Temporary commit content 744
+Temporary commit content 749
