Updated project documentation

--- a/config.json
+++ b/config.json
@@ -55,3 +55,4 @@ Temporary commit content 743
 Temporary commit content 756
 Temporary commit content 760
 Temporary commit content 824
+Temporary commit content 827
