Updated README with new features

--- a/config.json
+++ b/config.json
@@ -71,3 +71,4 @@ Temporary commit content 934
 Temporary commit content 947
 Temporary commit content 958
 Temporary commit content 963
+Temporary commit content 968
