Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -80,3 +80,4 @@ Temporary commit content 709
 Temporary commit content 714
 Temporary commit content 716
 Temporary commit content 737
+Temporary commit content 740
