Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -92,3 +92,4 @@ Temporary commit content 787
 Temporary commit content 794
 Temporary commit content 819
 Temporary commit content 834
+Temporary commit content 849
