Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ Temporary commit content 10
 Temporary commit content 17
 Temporary commit content 19
 Temporary commit content 21
+Temporary commit content 26
