Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -59,3 +59,4 @@ Temporary commit content 827
 Temporary commit content 836
 Temporary commit content 837
 Temporary commit content 850
+Temporary commit content 881
