Updated project documentation

--- a/config.json
+++ b/config.json
@@ -52,3 +52,4 @@ Temporary commit content 726
 Temporary commit content 734
 Temporary commit content 735
 Temporary commit content 743
+Temporary commit content 756
