Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,4 @@ Temporary commit content 233
 Temporary commit content 252
 Temporary commit content 264
 Temporary commit content 271
+Temporary commit content 273
