Added validation for user input

--- a/config.json
+++ b/config.json
@@ -17,3 +17,4 @@ Temporary commit content 234
 Temporary commit content 243
 Temporary commit content 251
 Temporary commit content 269
+Temporary commit content 276
