--- a/config.json
+++ b/config.json
@@ -38,3 +38,4 @@ Temporary commit content 445
 Temporary commit content 484
 Temporary commit content 485
 Temporary commit content 492
+Temporary commit content 552
