Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,4 @@ Temporary commit content 227
 Temporary commit content 233
 Temporary commit content 252
 Temporary commit content 264
+Temporary commit content 271
