Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -65,3 +65,4 @@ Temporary commit content 547
 Temporary commit content 558
 Temporary commit content 562
 Temporary commit content 566
+Temporary commit content 571
