Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -64,3 +64,4 @@ Temporary commit content 884
 Temporary commit content 886
 Temporary commit content 902
 Temporary commit content 905
+Temporary commit content 910
