Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,4 @@ Temporary commit content 418
 Temporary commit content 430
 Temporary commit content 446
 Temporary commit content 451
+Temporary commit content 452
