Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,4 @@ Temporary commit content 185
 Temporary commit content 191
 Temporary commit content 203
 Temporary commit content 223
+Temporary commit content 224
