Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -105,3 +105,4 @@ Temporary commit content 948
 Temporary commit content 960
 Temporary commit content 965
 Temporary commit content 966
+Temporary commit content 980
