Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -57,3 +57,4 @@ Temporary commit content 458
 Temporary commit content 468
 Temporary commit content 493
 Temporary commit content 505
+Temporary commit content 508
