Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ Temporary commit content 105
 Temporary commit content 132
 Temporary commit content 134
 Temporary commit content 139
+Temporary commit content 149
