Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -93,3 +93,4 @@ Temporary commit content 794
 Temporary commit content 819
 Temporary commit content 834
 Temporary commit content 849
+Temporary commit content 860
