Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -111,3 +111,4 @@ Temporary commit content 989
 Temporary commit content 1008
 Temporary commit content 1022
 Temporary commit content 1026
+Temporary commit content 1039
