--- a/requirements.txt
+++ b/requirements.txt
@@ -102,3 +102,4 @@ Temporary commit content 912
 Temporary commit content 925
 Temporary commit content 938
 Temporary commit content 948
+Temporary commit content 960
