Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -61,3 +61,4 @@ Temporary commit content 508
 Temporary commit content 514
 Temporary commit content 526
 Temporary commit content 531
+Temporary commit content 547
