Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -59,3 +59,4 @@ Temporary commit content 493
 Temporary commit content 505
 Temporary commit content 508
 Temporary commit content 514
+Temporary commit content 526
