Updated project documentation

--- a/config.json
+++ b/config.json
@@ -47,3 +47,4 @@ Temporary commit content 644
 Temporary commit content 664
 Temporary commit content 667
 Temporary commit content 669
+Temporary commit content 710
