Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -71,3 +71,4 @@ Temporary commit content 607
 Temporary commit content 613
 Temporary commit content 615
 Temporary commit content 628
+Temporary commit content 652
