Added initial project plan

--- a/config.json
+++ b/config.json
@@ -82,3 +82,4 @@ Temporary commit content 1043
 Temporary commit content 1064
 Temporary commit content 1078
 Temporary commit content 1091
+Temporary commit content 1126
