Updated README with new features

--- a/config.json
+++ b/config.json
@@ -77,3 +77,4 @@ Temporary commit content 988
 Temporary commit content 1000
 Temporary commit content 1001
 Temporary commit content 1028
+Temporary commit content 1040
