Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -72,3 +72,4 @@ Temporary commit content 947
 Temporary commit content 958
 Temporary commit content 963
 Temporary commit content 968
+Temporary commit content 987
