Updated project documentation

--- a/config.json
+++ b/config.json
@@ -56,3 +56,4 @@ Temporary commit content 756
 Temporary commit content 760
 Temporary commit content 824
 Temporary commit content 827
+Temporary commit content 836
