Updated README with new features

--- a/config.json
+++ b/config.json
@@ -4,3 +4,4 @@ Temporary commit content 40
 Temporary commit content 75
 Temporary commit content 77
 Temporary commit content 90
+Temporary commit content 114
