--- a/config.json
+++ b/config.json
@@ -85,3 +85,4 @@ Temporary commit content 1091
 Temporary commit content 1126
 Temporary commit content 1133
 Temporary commit content 1139
+Temporary commit content 1152
