Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -41,3 +41,4 @@ Temporary commit content 492
 Temporary commit content 552
 Temporary commit content 600
 Temporary commit content 627
+Temporary commit content 629
