Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,4 @@ Temporary commit content 225
 Temporary commit content 227
 Temporary commit content 233
 Temporary commit content 252
+Temporary commit content 264
