Optimized database queries

--- a/config.json
+++ b/config.json
@@ -65,3 +65,4 @@ Temporary commit content 886
 Temporary commit content 902
 Temporary commit content 905
 Temporary commit content 910
+Temporary commit content 926
