Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -55,3 +55,4 @@ Temporary commit content 451
 Temporary commit content 452
 Temporary commit content 458
 Temporary commit content 468
+Temporary commit content 493
