Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -75,3 +75,4 @@ Temporary commit content 652
 Temporary commit content 665
 Temporary commit content 684
 Temporary commit content 689
+Temporary commit content 704
