Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,4 @@ Temporary commit content 452
 Temporary commit content 458
 Temporary commit content 468
 Temporary commit content 493
+Temporary commit content 505
