Added validation for user input

--- a/config.json
+++ b/config.json
@@ -12,3 +12,4 @@ Temporary commit content 189
 Temporary commit content 210
 Temporary commit content 218
 Temporary commit content 219
+Temporary commit content 226
