Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -81,3 +81,4 @@ Temporary commit content 714
 Temporary commit content 716
 Temporary commit content 737
 Temporary commit content 740
+Temporary commit content 744
