Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -85,3 +85,4 @@ Temporary commit content 744
 Temporary commit content 749
 Temporary commit content 761
 Temporary commit content 762
+Temporary commit content 766
