Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,4 @@ Temporary commit content 359
 Temporary commit content 361
 Temporary commit content 362
 Temporary commit content 368
+Temporary commit content 384
