Updated README with new features

--- a/config.json
+++ b/config.json
@@ -54,3 +54,4 @@ Temporary commit content 735
 Temporary commit content 743
 Temporary commit content 756
 Temporary commit content 760
+Temporary commit content 824
