Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -41,3 +41,4 @@ Temporary commit content 343
 Temporary commit content 359
 Temporary commit content 361
 Temporary commit content 362
+Temporary commit content 368
