Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -87,3 +87,4 @@ Temporary commit content 761
 Temporary commit content 762
 Temporary commit content 766
 Temporary commit content 778
+Temporary commit content 785
