Added initial project plan

--- a/config.json
+++ b/config.json
@@ -2,3 +2,4 @@ Temporary commit content 4
 Temporary commit content 18
 Temporary commit content 40
 Temporary commit content 75
+Temporary commit content 77
