Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -116,3 +116,4 @@ Temporary commit content 1042
 Temporary commit content 1054
 Temporary commit content 1069
 Temporary commit content 1083
+Temporary commit content 1106
