Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -94,3 +94,4 @@ Temporary commit content 819
 Temporary commit content 834
 Temporary commit content 849
 Temporary commit content 860
+Temporary commit content 861
