Optimized database queries

--- a/config.json
+++ b/config.json
@@ -13,3 +13,4 @@ Temporary commit content 210
 Temporary commit content 218
 Temporary commit content 219
 Temporary commit content 226
+Temporary commit content 234
