Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -114,3 +114,4 @@ Temporary commit content 1026
 Temporary commit content 1039
 Temporary commit content 1042
 Temporary commit content 1054
+Temporary commit content 1069
