Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -48,3 +48,4 @@ Temporary commit content 664
 Temporary commit content 667
 Temporary commit content 669
 Temporary commit content 710
+Temporary commit content 726
