Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -78,3 +78,4 @@ Temporary commit content 1000
 Temporary commit content 1001
 Temporary commit content 1028
 Temporary commit content 1040
+Temporary commit content 1043
