Optimized database queries

--- a/config.json
+++ b/config.json
@@ -79,3 +79,4 @@ Temporary commit content 1001
 Temporary commit content 1028
 Temporary commit content 1040
 Temporary commit content 1043
+Temporary commit content 1064
