Fixed typos in documentation

--- a/config.json
+++ b/config.json
@@ -84,3 +84,4 @@ Temporary commit content 1078
 Temporary commit content 1091
 Temporary commit content 1126
 Temporary commit content 1133
+Temporary commit content 1139
