Added validation for user input

--- a/config.json
+++ b/config.json
@@ -42,3 +42,4 @@ Temporary commit content 552
 Temporary commit content 600
 Temporary commit content 627
 Temporary commit content 629
+Temporary commit content 630
