Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -63,3 +63,4 @@ Temporary commit content 526
 Temporary commit content 531
 Temporary commit content 547
 Temporary commit content 558
+Temporary commit content 562
