Added initial project plan

--- a/config.json
+++ b/config.json
@@ -83,3 +83,4 @@ Temporary commit content 1064
 Temporary commit content 1078
 Temporary commit content 1091
 Temporary commit content 1126
+Temporary commit content 1133
