Updated README with new features

--- a/config.json
+++ b/config.json
@@ -81,3 +81,4 @@ Temporary commit content 1040
 Temporary commit content 1043
 Temporary commit content 1064
 Temporary commit content 1078
+Temporary commit content 1091
