Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,4 @@ Temporary commit content 224
 Temporary commit content 225
 Temporary commit content 227
 Temporary commit content 233
+Temporary commit content 252
