Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -45,3 +45,4 @@ Temporary commit content 629
 Temporary commit content 630
 Temporary commit content 644
 Temporary commit content 664
+Temporary commit content 667
