Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,4 @@ Temporary commit content 387
 Temporary commit content 389
 Temporary commit content 394
 Temporary commit content 397
+Temporary commit content 416
