Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -30,3 +30,4 @@ Temporary commit content 374
 Temporary commit content 379
 Temporary commit content 383
 Temporary commit content 410
+Temporary commit content 427
