Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -90,3 +90,4 @@ Temporary commit content 1153
 Temporary commit content 1156
 Temporary commit content 1163
 Temporary commit content 1174
+Temporary commit content 1195
