Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -11,3 +11,4 @@ Temporary commit content 183
 Temporary commit content 189
 Temporary commit content 210
 Temporary commit content 218
+Temporary commit content 219
