Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -45,3 +45,4 @@ Temporary commit content 368
 Temporary commit content 384
 Temporary commit content 387
 Temporary commit content 389
+Temporary commit content 394
