Added validation for user input

--- a/config.json
+++ b/config.json
@@ -75,3 +75,4 @@ Temporary commit content 968
 Temporary commit content 987
 Temporary commit content 988
 Temporary commit content 1000
+Temporary commit content 1001
