Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -121,3 +121,4 @@ Temporary commit content 1107
 Temporary commit content 1116
 Temporary commit content 1184
 Temporary commit content 1192
+Temporary commit content 1197
