Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -108,3 +108,4 @@ Temporary commit content 966
 Temporary commit content 980
 Temporary commit content 985
 Temporary commit content 989
+Temporary commit content 1008
