Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,4 @@ Temporary commit content 430
 Temporary commit content 446
 Temporary commit content 451
 Temporary commit content 452
+Temporary commit content 458
