Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,4 @@ Temporary commit content 264
 Temporary commit content 271
 Temporary commit content 273
 Temporary commit content 296
+Temporary commit content 302
