Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -115,3 +115,4 @@ Temporary commit content 1039
 Temporary commit content 1042
 Temporary commit content 1054
 Temporary commit content 1069
+Temporary commit content 1083
