Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -33,3 +33,4 @@ Temporary commit content 410
 Temporary commit content 427
 Temporary commit content 429
 Temporary commit content 436
+Temporary commit content 441
