Optimized database queries

--- a/config.json
+++ b/config.json
@@ -23,3 +23,4 @@ Temporary commit content 283
 Temporary commit content 295
 Temporary commit content 309
 Temporary commit content 313
+Temporary commit content 318
