Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -21,3 +21,4 @@ Temporary commit content 276
 Temporary commit content 282
 Temporary commit content 283
 Temporary commit content 295
+Temporary commit content 309
