Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -19,3 +19,4 @@ Temporary commit content 251
 Temporary commit content 269
 Temporary commit content 276
 Temporary commit content 282
+Temporary commit content 283
