--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,4 @@ Temporary commit content 252
 Temporary commit content 264
 Temporary commit content 271
 Temporary commit content 273
+Temporary commit content 296
