Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -84,3 +84,4 @@ Temporary commit content 740
 Temporary commit content 744
 Temporary commit content 749
 Temporary commit content 761
+Temporary commit content 762
