Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -18,3 +18,4 @@ Temporary commit content 243
 Temporary commit content 251
 Temporary commit content 269
 Temporary commit content 276
+Temporary commit content 282
