Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,4 @@ Temporary commit content 362
 Temporary commit content 368
 Temporary commit content 384
 Temporary commit content 387
+Temporary commit content 389
