Updated README with new features

--- a/config.json
+++ b/config.json
@@ -44,3 +44,4 @@ Temporary commit content 627
 Temporary commit content 629
 Temporary commit content 630
 Temporary commit content 644
+Temporary commit content 664
