Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ Temporary commit content 134
 Temporary commit content 139
 Temporary commit content 149
 Temporary commit content 153
+Temporary commit content 154
