Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -95,3 +95,4 @@ Temporary commit content 834
 Temporary commit content 849
 Temporary commit content 860
 Temporary commit content 861
+Temporary commit content 863
