Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -76,3 +76,4 @@ Temporary commit content 665
 Temporary commit content 684
 Temporary commit content 689
 Temporary commit content 704
+Temporary commit content 709
