Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -74,3 +74,4 @@ Temporary commit content 628
 Temporary commit content 652
 Temporary commit content 665
 Temporary commit content 684
+Temporary commit content 689
