Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -62,3 +62,4 @@ Temporary commit content 850
 Temporary commit content 881
 Temporary commit content 884
 Temporary commit content 886
+Temporary commit content 902
