Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -107,3 +107,4 @@ Temporary commit content 965
 Temporary commit content 966
 Temporary commit content 980
 Temporary commit content 985
+Temporary commit content 989
