Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,4 @@ Temporary commit content 361
 Temporary commit content 362
 Temporary commit content 368
 Temporary commit content 384
+Temporary commit content 387
