--- a/requirements.txt
+++ b/requirements.txt
@@ -97,3 +97,4 @@ Temporary commit content 860
 Temporary commit content 861
 Temporary commit content 863
 Temporary commit content 890
+Temporary commit content 906
