Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -80,3 +80,4 @@ Temporary commit content 1028
 Temporary commit content 1040
 Temporary commit content 1043
 Temporary commit content 1064
+Temporary commit content 1078
