Added validation for user input

--- a/config.json
+++ b/config.json
@@ -15,3 +15,4 @@ Temporary commit content 219
 Temporary commit content 226
 Temporary commit content 234
 Temporary commit content 243
+Temporary commit content 251
