--- a/requirements.txt
+++ b/requirements.txt
@@ -66,3 +66,4 @@ Temporary commit content 558
 Temporary commit content 562
 Temporary commit content 566
 Temporary commit content 571
+Temporary commit content 596
