Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,4 @@ Temporary commit content 191
 Temporary commit content 203
 Temporary commit content 223
 Temporary commit content 224
+Temporary commit content 225
