Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -113,3 +113,4 @@ Temporary commit content 1022
 Temporary commit content 1026
 Temporary commit content 1039
 Temporary commit content 1042
+Temporary commit content 1054
