Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -72,3 +72,4 @@ Temporary commit content 613
 Temporary commit content 615
 Temporary commit content 628
 Temporary commit content 652
+Temporary commit content 665
