Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,4 @@ Temporary commit content 139
 Temporary commit content 149
 Temporary commit content 153
 Temporary commit content 154
+Temporary commit content 167
