Added initial project plan

--- a/config.json
+++ b/config.json
@@ -36,3 +36,4 @@ Temporary commit content 436
 Temporary commit content 441
 Temporary commit content 445
 Temporary commit content 484
+Temporary commit content 485
