Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -109,3 +109,4 @@ Temporary commit content 980
 Temporary commit content 985
 Temporary commit content 989
 Temporary commit content 1008
+Temporary commit content 1022
