Improved error handling logic

--- a/config.json
+++ b/config.json
@@ -69,3 +69,4 @@ Temporary commit content 926
 Temporary commit content 933
 Temporary commit content 934
 Temporary commit content 947
+Temporary commit content 958
