Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -91,3 +91,4 @@ Temporary commit content 785
 Temporary commit content 787
 Temporary commit content 794
 Temporary commit content 819
+Temporary commit content 834
