Improved error handling logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -89,3 +89,4 @@ Temporary commit content 766
 Temporary commit content 778
 Temporary commit content 785
 Temporary commit content 787
+Temporary commit content 794
