Fixed typos in documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ Temporary commit content 167
 Temporary commit content 171
 Temporary commit content 181
 Temporary commit content 185
+Temporary commit content 191
