Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ Temporary commit content 104
 Temporary commit content 105
 Temporary commit content 132
 Temporary commit content 134
+Temporary commit content 139
