Updated README with new features

--- a/config.json
+++ b/config.json
@@ -88,3 +88,4 @@ Temporary commit content 1139
 Temporary commit content 1152
 Temporary commit content 1153
 Temporary commit content 1156
+Temporary commit content 1163
