Added validation for user input

--- a/config.json
+++ b/config.json
@@ -76,3 +76,4 @@ Temporary commit content 987
 Temporary commit content 988
 Temporary commit content 1000
 Temporary commit content 1001
+Temporary commit content 1028
