Updated README with new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,4 @@ Temporary commit content 397
 Temporary commit content 416
 Temporary commit content 418
 Temporary commit content 430
+Temporary commit content 446
