Fixed bug in data processing script

--- a/requirements.txt
+++ b/requirements.txt
@@ -112,3 +112,4 @@ Temporary commit content 1008
 Temporary commit content 1022
 Temporary commit content 1026
 Temporary commit content 1039
+Temporary commit content 1042
