Updated README with new features

--- a/config.json
+++ b/config.json
@@ -74,3 +74,4 @@ Temporary commit content 963
 Temporary commit content 968
 Temporary commit content 987
 Temporary commit content 988
+Temporary commit content 1000
