Optimized database queries

--- a/config.json
+++ b/config.json
@@ -26,3 +26,4 @@ Temporary commit content 313
 Temporary commit content 318
 Temporary commit content 332
 Temporary commit content 355
+Temporary commit content 374
