Refactored code for better readability

--- a/config.json
+++ b/config.json
@@ -89,3 +89,4 @@ Temporary commit content 1152
 Temporary commit content 1153
 Temporary commit content 1156
 Temporary commit content 1163
+Temporary commit content 1174
