Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ Temporary commit content 83
 Temporary commit content 104
 Temporary commit content 105
 Temporary commit content 132
+Temporary commit content 134
