Updated project documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -100,3 +100,4 @@ Temporary commit content 890
 Temporary commit content 906
 Temporary commit content 912
 Temporary commit content 925
+Temporary commit content 938
