Optimized database queries

--- a/requirements.txt
+++ b/requirements.txt
@@ -78,3 +78,4 @@ Temporary commit content 689
 Temporary commit content 704
 Temporary commit content 709
 Temporary commit content 714
+Temporary commit content 716
