Enhanced UI responsiveness

--- a/requirements.txt
+++ b/requirements.txt
@@ -69,3 +69,4 @@ Temporary commit content 571
 Temporary commit content 596
 Temporary commit content 607
 Temporary commit content 613
+Temporary commit content 615
