Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,4 @@ Temporary commit content 223
 Temporary commit content 224
 Temporary commit content 225
 Temporary commit content 227
+Temporary commit content 233
