Optimized database queries

--- a/config.json
+++ b/config.json
@@ -39,3 +39,4 @@ Temporary commit content 484
 Temporary commit content 485
 Temporary commit content 492
 Temporary commit content 552
+Temporary commit content 600
