Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -83,3 +83,4 @@ Temporary commit content 737
 Temporary commit content 740
 Temporary commit content 744
 Temporary commit content 749
+Temporary commit content 761
