Updated README with new features

--- a/config.json
+++ b/config.json
@@ -37,3 +37,4 @@ Temporary commit content 441
 Temporary commit content 445
 Temporary commit content 484
 Temporary commit content 485
+Temporary commit content 492
