Updated README with new features

--- a/config.json
+++ b/config.json
@@ -27,3 +27,4 @@ Temporary commit content 318
 Temporary commit content 332
 Temporary commit content 355
 Temporary commit content 374
+Temporary commit content 379
