Refactored code for better readability

--- a/requirements.txt
+++ b/requirements.txt
@@ -110,3 +110,4 @@ Temporary commit content 985
 Temporary commit content 989
 Temporary commit content 1008
 Temporary commit content 1022
+Temporary commit content 1026
