Enhanced UI responsiveness

--- a/config.json
+++ b/config.json
@@ -9,3 +9,4 @@ Temporary commit content 136
 Temporary commit content 150
 Temporary commit content 183
 Temporary commit content 189
+Temporary commit content 210
