Fixed bug in data processing script

--- a/config.json
+++ b/config.json
@@ -16,3 +16,4 @@ Temporary commit content 226
 Temporary commit content 234
 Temporary commit content 243
 Temporary commit content 251
+Temporary commit content 269
