Added initial project plan

--- a/requirements.txt
+++ b/requirements.txt
@@ -54,3 +54,4 @@ Temporary commit content 446
 Temporary commit content 451
 Temporary commit content 452
 Temporary commit content 458
+Temporary commit content 468
