Updated README with new features

--- a/config.json
+++ b/config.json
@@ -46,3 +46,4 @@ Temporary commit content 630
 Temporary commit content 644
 Temporary commit content 664
 Temporary commit content 667
+Temporary commit content 669
