--- a/requirements.txt
+++ b/requirements.txt
@@ -120,3 +120,4 @@ Temporary commit content 1106
 Temporary commit content 1107
 Temporary commit content 1116
 Temporary commit content 1184
+Temporary commit content 1192
