Updated project documentation

--- a/config.json
+++ b/config.json
@@ -66,3 +66,4 @@ Temporary commit content 902
 Temporary commit content 905
 Temporary commit content 910
 Temporary commit content 926
+Temporary commit content 933
