Added initial project plan

--- a/config.json
+++ b/config.json
@@ -61,3 +61,4 @@ Temporary commit content 837
 Temporary commit content 850
 Temporary commit content 881
 Temporary commit content 884
+Temporary commit content 886
